--- a/m10_v01_store_sales_prediction.ipynb
+++ b/m10_v01_store_sales_prediction.ipynb
@@ -54,8 +54,6 @@
     "import pandas as pd \n",
     "import seaborn as sns\n",
     "import xgboost as xgb\n",
-    "\n",
-    "\n",
     "                \n",
     "\n",
     "from scipy                 import stats  as ss\n",
@@ -6706,6 +6704,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
   },
   "varInspector": {
    "cols": {
