--- a/m09_v01_store_sales_prediction.ipynb
+++ b/m09_v01_store_sales_prediction.ipynb
@@ -1093,9 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 4.0. PASSO 04 - ANALISE EXPLORATORIA DE DADOS (EDA)"
    ]
@@ -1108,7 +1106,6 @@
      "end_time": "2020-06-13T15:53:23.243223Z",
      "start_time": "2020-06-13T15:53:23.088177Z"
     },
-    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -1119,8 +1116,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 4.1. Analise Univariada"
@@ -1253,20 +1249,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 4.2. Analise Bivariada"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### **H1.** Lojas com maior sortimento deveriam vender mais.\n",
     "**FALSA** Lojas com MAIOR SORTUMENTO vendem MENOS"
@@ -1280,7 +1270,6 @@
      "end_time": "2020-06-13T15:53:59.415447Z",
      "start_time": "2020-06-13T15:53:58.413013Z"
     },
-    "hidden": true,
     "hide_input": false,
     "scrolled": false
    },
@@ -1303,8 +1292,7 @@
     "ExecuteTime": {
      "end_time": "2020-06-13T15:53:59.438447Z",
      "start_time": "2020-06-13T15:53:59.416445Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1314,8 +1302,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H2.** Lojas com competidadores mais próximos deveriam vender menos.\n",
@@ -1371,8 +1358,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H3.** Lojas com competidadores à mais tempo deveriam vender mais.\n",
@@ -1410,8 +1396,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H4.** Lojas com promoções ativas por mais tempo deveriam vender mais.\n",
@@ -1458,8 +1443,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### <s>**H5.** Lojas com mais dias de promoção deveriam vender mais.</s>"
@@ -1495,8 +1479,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### **H7.** Lojas com mais promoções consecutivas deveriam vender mais.\n",
@@ -1544,8 +1527,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H8. Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
@@ -1580,8 +1562,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H9. Lojas deveriam vender mais ao longo dos anos.\n",
@@ -1616,8 +1597,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H10. Lojas deveriam vender mais no segundo semestre do ano.\n",
@@ -1652,8 +1632,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H11. Lojas deveriam vender mais depois do dia 10 de cada mês.\n",
@@ -1695,8 +1674,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H12. Lojas deveriam vender menos aos finais de semana.\n",
@@ -1731,8 +1709,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### H13. Lojas deveriam vender menos durante os feriados escolares.\n",
@@ -1765,8 +1742,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 4.2.1. Resumo das Hipóteses"
@@ -1823,8 +1799,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 4.3. Analise Multivariada"
@@ -3089,7 +3064,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
   },
   "varInspector": {
    "cols": {
