--- a/m02_v01_store_sales_prediction.ipynb
+++ b/m02_v01_store_sales_prediction.ipynb
@@ -134,7 +134,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 1.0 DESCRICAO DOS DADOS"
    ]
@@ -146,7 +148,8 @@
     "ExecuteTime": {
      "end_time": "2020-05-30T18:58:14.341824Z",
      "start_time": "2020-05-30T18:58:14.245826Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -156,7 +159,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.1. Rename Columns"
@@ -191,7 +195,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.2. Data Dimensions"
@@ -216,7 +221,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.3. Data Types"
@@ -242,7 +248,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.4. Check NA"
@@ -266,7 +273,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.5. Fillout NA"
@@ -364,7 +372,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 1.6. Change Types"
@@ -406,7 +415,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## 1.7. Descriptive Statistical"
    ]
@@ -418,7 +430,8 @@
     "ExecuteTime": {
      "end_time": "2020-05-30T19:02:55.846825Z",
      "start_time": "2020-05-30T19:02:55.562825Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -429,7 +442,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### 1.7.1 Numerical Attributes"
@@ -489,7 +503,9 @@
     "ExecuteTime": {
      "end_time": "2020-05-29T12:07:53.302518Z",
      "start_time": "2020-05-29T12:07:53.298517Z"
-    }
+    },
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### 1.7.2. Categorical Attributes"
@@ -502,7 +518,8 @@
     "ExecuteTime": {
      "end_time": "2020-05-30T19:03:14.281825Z",
      "start_time": "2020-05-30T19:03:14.028825Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -516,7 +533,8 @@
     "ExecuteTime": {
      "end_time": "2020-05-30T19:03:15.299826Z",
      "start_time": "2020-05-30T19:03:14.283825Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -533,13 +551,6 @@
     "plt.subplot(1,3,3)\n",
     "sns.boxplot ( x='assortment', y='sales', data=aux1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -559,7 +570,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
   },
   "varInspector": {
    "cols": {
