--- a/m09_v01_store_sales_prediction.ipynb
+++ b/m09_v01_store_sales_prediction.ipynb
@@ -1093,7 +1093,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 4.0. PASSO 04 - ANALISE EXPLORATORIA DE DADOS (EDA)"
    ]
@@ -1106,6 +1108,7 @@
      "end_time": "2020-06-13T15:53:23.243223Z",
      "start_time": "2020-06-13T15:53:23.088177Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -1116,7 +1119,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 4.1. Analise Univariada"
@@ -1249,14 +1253,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## 4.2. Analise Bivariada"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### **H1.** Lojas com maior sortimento deveriam vender mais.\n",
     "**FALSA** Lojas com MAIOR SORTUMENTO vendem MENOS"
@@ -1270,6 +1280,7 @@
      "end_time": "2020-06-13T15:53:59.415447Z",
      "start_time": "2020-06-13T15:53:58.413013Z"
     },
+    "hidden": true,
     "hide_input": false,
     "scrolled": false
    },
@@ -1292,7 +1303,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-13T15:53:59.438447Z",
      "start_time": "2020-06-13T15:53:59.416445Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1302,7 +1314,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### **H2.** Lojas com competidadores mais próximos deveriam vender menos.\n",
@@ -1358,7 +1371,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### **H3.** Lojas com competidadores à mais tempo deveriam vender mais.\n",
@@ -1396,7 +1410,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### **H4.** Lojas com promoções ativas por mais tempo deveriam vender mais.\n",
@@ -1443,7 +1458,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### <s>**H5.** Lojas com mais dias de promoção deveriam vender mais.</s>"
@@ -1479,7 +1495,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### **H7.** Lojas com mais promoções consecutivas deveriam vender mais.\n",
@@ -1527,7 +1544,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H8. Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
@@ -1562,7 +1580,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H9. Lojas deveriam vender mais ao longo dos anos.\n",
@@ -1597,7 +1616,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H10. Lojas deveriam vender mais no segundo semestre do ano.\n",
@@ -1632,7 +1652,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H11. Lojas deveriam vender mais depois do dia 10 de cada mês.\n",
@@ -1674,7 +1695,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H12. Lojas deveriam vender menos aos finais de semana.\n",
@@ -1709,7 +1731,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### H13. Lojas deveriam vender menos durante os feriados escolares.\n",
@@ -1742,7 +1765,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### 4.2.1. Resumo das Hipóteses"
@@ -1799,7 +1823,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 4.3. Analise Multivariada"
@@ -2093,9 +2118,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 6.0. PASSO 06 - FEATURE SELECTION"
    ]
@@ -2107,8 +2130,7 @@
     "ExecuteTime": {
      "end_time": "2020-06-13T15:54:47.359239Z",
      "start_time": "2020-06-13T15:54:46.969241Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2118,8 +2140,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 6.1. Split dataframe into training and test dataset"
@@ -2200,10 +2221,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 6.2. Boruta as Feature Selector"
    ]
@@ -2214,8 +2232,7 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2020-06-13T15:49:19.607Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2233,8 +2250,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 6.2.1. Best Features from Boruta"
@@ -2264,8 +2280,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 6.3. Manual Feature Selection"
@@ -3064,7 +3079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "nbTranslate": {
    "displayLangs": [
